changed FDKey to not implement Set, instead only iterable changed FDKeySet to not implement Set, instead only Collection
reworked implementation of reflexive and transitive calculations of FDRelation, fixed a bug not showing all keys

fixed a bug GSon not being able to serialize correctly.

replaced instances of class Report of FDRunner with FDSolver