@@ -2,20 +2,18 @@ package de.unifrankfurt.dbis;
 
 
 import java.util.*;
-import java.util.function.Predicate;
+import java.util.function.Consumer;
 
 /**
- * FDKey extends HashSet<String>. It is basically just that.
- * It is easier to work with FDKey instead of HashSet<String>.
+ * FDKey implements Iterable<String>.
+ * It is basically an immutable Set<String> .
  * Has the ability to create a Set with all true subsets with size>0 of itself.
- * FDKey is immutable
  *
  * @author Patrick Bonack
- * @version 1.0
- * @since 18.11.2017
+ * @version 1.1
  */
-public class FDKey implements Set<String> {
-    private HashSet<String> set;
+public class FDKey implements Iterable<String> {
+    private final Set<String> set;
 
     /**
      * attributes should be unique
@@ -23,8 +21,7 @@ public class FDKey implements Set<String> {
      * @param attributes collection of String attributes
      */
     public FDKey(Collection<String> attributes) {
-        set = new HashSet<>(attributes);
-        if (set.contains(null)) throw new NullPointerException();
+        this(attributes.toArray(new String[0]));
     }
 
     /**
@@ -33,12 +30,7 @@ public class FDKey implements Set<String> {
      * @param attributes String[]
      */
     public FDKey(String... attributes) {
-        this.set = new HashSet<>(Arrays.asList(attributes));
-        if (this.contains(null)) throw new NullPointerException();
-    }
-
-    public FDKey() {
-        this.set = new HashSet<>();
+        set = Set.of(attributes);
     }
 
     @Override
@@ -48,79 +40,30 @@ public class FDKey implements Set<String> {
 
     @Override
     public boolean equals(Object o) {
-        return Objects.equals(this.set, o);
+        if (this == o) return true;
+        if (!(o instanceof FDKey)) return false;
+        FDKey strings = (FDKey) o;
+        return set.equals(strings.set);
     }
 
-    @Override
     public int size() {
         return this.set.size();
     }
 
-    @Override
-    public boolean isEmpty() {
-        return this.set.isEmpty();
-    }
 
-    @Override
-    public boolean contains(Object o) {
-        return this.set.contains(o);
-    }
-
-    @Override
-    public Iterator<String> iterator() {
-        return this.set.iterator();
-    }
-
-    @Override
     public Object[] toArray() {
         return this.set.toArray();
     }
 
-    @Override
     public <T> T[] toArray(T[] ts) {
         return this.set.toArray(ts);
     }
 
-    @Override
-    public boolean add(String s) {
-        //throw new UnsupportedOperationException();
-        return this.set.add(s);//needed for gson.load()
-    }
 
-    @Override
-    public boolean remove(Object o) {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean containsAll(Collection<?> collection) {
+    public boolean containsAll(Collection<String> collection) {
         return this.set.containsAll(collection);
     }
 
-    @Override
-    public void clear() {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean removeAll(Collection<?> collection) {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean addAll(Collection<? extends String> collection) {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean retainAll(Collection<?> collection) {
-        throw new UnsupportedOperationException();
-    }
-
-    @Override
-    public boolean removeIf(Predicate<? super String> predicate) {
-        throw new UnsupportedOperationException();
-    }
 
     /**
      * @return null if this is empty.
@@ -134,7 +77,8 @@ public class FDKey implements Set<String> {
             HashSet<FDKey> newSet = new HashSet<>();
             for (String s : this) {
                 for (FDKey key : set) {
-                    Collection<String> col = new HashSet<>(key);
+                    Collection<String> col = new HashSet<>();
+                    key.forEach(col::add);
                     col.add(s);
                     FDKey newKey = new FDKey(col);
                     newSet.add(newKey);
@@ -151,6 +95,33 @@ public class FDKey implements Set<String> {
     @Override
     public String toString() {
         return Arrays.asList(this.toArray()).toString();
+    }
+
+    @Override
+    public Iterator<String> iterator() {
+        return this.set.iterator();
+    }
+
+    @Override
+    public void forEach(Consumer<? super String> action) {
+        this.set.forEach(action);
+    }
+
+    @Override
+    public Spliterator<String> spliterator() {
+        return this.set.spliterator();
+    }
+
+    public boolean isEmpty() {
+        return this.set.isEmpty();
+    }
+
+    public Set<String> toSet() {
+        return new HashSet<>(this.set);
+    }
+
+    public boolean isSuperKeyOf(FDKey lookUpKey) {
+        return this.set.containsAll(lookUpKey.toSet());
     }
 
     /**
